<resources>
    <string name="app_name">AppBanHang</string>
    <string name="msg">Please all</string>
    <string name="manhinhchao1">Thế giới mua sắm trong tầm tay bạn</string>
    <string name="manhinhchao2">Giao hàng tận nơi + thanh toán dễ dàng</string>
    <string name="manhinhchao3">100% bảo vệ người tiêu dùng</string>
    <string name="menusearch">Tìm kiếm</string>
    <string name="open">Mở</string>
    <string name="close">Đóng</string>
    <string name="quenmk">Quên mật khẩu?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="hoacdangnhap">Hoặc đăng nhập bằng</string>
    <string name="dangky">Đăng ký</string>
    <string name="hoacdangky">Hoặc đăng ký bằng</string>
    <string name="lable">Đăng nhập / Đăng ký</string>
    <string name="facebook_app_id">417354355402547</string>
    <string name="fb_login_protocol_scheme">fb417354355402547</string>
    <string name="google_plus_client">579801578015-qvms8llsuq5pke75fva54uban6kuj0ml.apps.googleusercontent.com</string>
    <string name="thuong_hieu">CÁC THƯƠNG HIỆU LỚN</string>
    <string name="laptop">TOP MÁY TÍNH</string>
    <string name="asus">ASUS</string>
    <string name="candiencacmuc">Cần điền tất cả các mục</string>
    <string name="hoten">Họ tên đầy đủ</string>
    <string name="email">Địa chỉ Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="dkmatkhau">Mật khẩu phải bao gồm 6 ký tự và 1 chữ viết hoa</string>
    <string name="nlmatkhau">Nhập lại mật khẩu</string>
    <string name="nhankmemail">Tôi muốn nhận các khuyến mãi độc quyền qua Email</string>
    <string name="dieukhoan">Tôi đã đọc và hiểu rõ các điều khoản bảo mật</string>
    <string name="tensp">Tên sản phẩm</string>
    <string name="giasp">Giá sản phẩm</string>
    <string name="giamgiasp">Giá sản phẩm</string>
    <string name="topspbantrongthang">Top 10 sản phẩm bán nhiều trong tháng</string>
    <string name="topsanphamchatluong">Top sản phẩm chất lượng giá rẻ</string>
    <string name="topsanpham">Top sản phẩm</string>
    <string name="topsanphamnoitieng">Top sản phẩm nổi tiếng</string>
    <string name="topthuonghieu">TOP CÁC THƯƠNG HIỆU</string>
    <string name="hangmoive">SẢN PHẨM MỚI VỀ</string>
    <string name="loc">Lọc</string>
    <string name="sapxep">Sắp xếp</string>
    <string name="cacsanpham">Các sản phẩm</string>
    <string name="banvadonggoiboi">Bán và đóng gói bởi</string>
    <string name="tencuahang">LYNK MYU</string>
    <string name="trahang">Trả hàng miễn phí</string>
    <string name="dambaochinhhang">Đảm bảo chính hãng 100%</string>
    <string name="baovenguoimuahang">Bảo vệ người mua hàng 100%</string>
    <string name="dambaosuhailong">Đảm bảo sự hài lòng</string>
    <string name="chitietsanpham">Chi tiết sản phẩm</string>
    <string name="danhgiasanpham">Đánh giá và nhận xét</string>
    <string name="xemnhanxet">Xem tất cả nhận xét</string>
    <string name="bansethich">Bạn sẽ thích</string>
    <string name="muahang">Mua hàng</string>
    <string name="vietdanhgia">Viết đánh giá</string>
    <string name="themdanhgia">Nhận xét về sản phẩm này</string>
    <string name="vietnoidung">Viết nội dung</string>
    <string name="tieude">Viết tiêu đề</string>
    <string name="danhgia">Đánh giá</string>
    <string name="tieudedanhgia">Tiêu đề đánh giá</string>
    <string name="duocdangboi">Được đăng bởi</string>
    <string name="noidungdanhgia">Nội dung đánh giá</string>
    <string name="giohang">Giỏ hàng</string>
    <string name="guitoi">Gửi tới: </string>
    <string name="tennguoinhan">Tên người nhận </string>
    <string name="diachi">Địa chỉ: </string>
    <string name="diachinguoinhan">Địa chỉ của người nhận </string>
    <string name="sodienthoai">Số điện thoại: </string>
    <string name="sdtnguoinhan">Số điện thoại của người nhận </string>
    <string name="tuychon">Tùy chọn giao hàng</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="thanhtoantannoi">Thanh toán khi nhân hàng</string>
    <string name="thanhtoanquathe">Thanh toán bằng visa</string>
    <string name="camket">Tôi cam kết các thông tin đặt hàng trên là chính xác!</string>
    <string name="tongtien">Tổng tiền:</string>
</resources>
