<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/candiencacmuc"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tip_hoTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <EditText
                android:id="@+id/et_hoTen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hoten"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tip_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tip_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <com.myubeo.appbanhang.CustomView.CustomPassword
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/matkhau"
                app:useStrike="true"
                app:useValidate="true"
                android:textColor="@color/colorBlack"
                />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dkmatkhau"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tip_nhapLaiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <com.myubeo.appbanhang.CustomView.CustomPassword
                android:id="@+id/et_nhapLaiPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nlmatkhau"
                app:useStrike="true"
                android:textColor="@color/colorBlack"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/scp_sendemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nhankmemail"
            android:textStyle="bold"
            android:checked="true"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/btn_dangky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgcart"
            android:text="@string/dangky"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dieukhoan"
            android:layout_margin="10dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hoacdangky"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_DNFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/facebookiconsmall"
                android:text="@string/facebook"
                android:background="@drawable/vienfacebook"
                android:textColor="@color/colorFacebook"
                android:layout_margin="8dp"
                />

            <Button
                android:id="@+id/btn_DNGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/googleplussmall"
                android:text="@string/google"
                android:background="@drawable/viengoogle"
                android:textColor="@color/colorGoogle"
                android:layout_margin="8dp"
                />

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

